prevent call-to-action button from wrapping below the float:left logo

--- a/less/agency.less
+++ b/less/agency.less
@@ -175,6 +175,7 @@ header {
         float: left;
         margin-left: -24px;
         margin-top: -16px;
+        padding-bottom: 40px; // make sure call-to-action button does not wrap
         width: 150px;
     }
 	.intro-text {
